[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/rooms/Room_TH_AULA.gd" type="Script" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://graphics/aula/Aula-finish_low.JPG" type="Texture" id=4]
[ext_resource path="res://src/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=6]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=7]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=1]
resource_name = "GetInScreen"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "zoomToMonitor"
}, {
"args": [  ],
"method": "zoomTotallyOut"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "showPage"
} ]
}

[node name="RoomAULA" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.126, 303.536 )
scale = Vector2( 0.683439, 0.683439 )
texture = ExtResource( 4 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 6

[node name="BackButton" type="TextureButton" parent="CanvasLayer3"]
margin_left = 107.0
margin_top = 592.0
margin_right = 207.0
margin_bottom = 672.0
rect_rotation = 180.0
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="ColorRect" parent="CanvasLayer3"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="CanvasLayer3/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 7 )

[node name="DialogOkButton" type="TouchScreenButton" parent="CanvasLayer3/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 3 )

[node name="Content" type="Label" parent="CanvasLayer3/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
custom_fonts/font = SubResource( 2 )
text = "Verschaffe dir Zugang zum Bildschirm."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BackgroundUnfocus" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="VarsAndDesign" parent="CanvasLayer2" instance=ExtResource( 1 )]

[node name="Monitor" type="TouchScreenButton" parent="CanvasLayer2"]
position = Vector2( 486.386, 205.733 )
scale = Vector2( 0.173501, 0.143378 )
normal = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GetInScreen = SubResource( 1 )

[connection signal="pressed" from="CanvasLayer3/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="released" from="CanvasLayer3/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="CanvasLayer2/Monitor" to="." method="_on_Monitor_released"]
